# ComputerGraphics

Lab1/: CMakeLists.txt  Report.docx  main.cpp
Lab2/: CMakeLists.txt  Report.docx
Lab3/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  Report.docx  main.cpp
Lab5/: CMakeLists.txt  ELightSources.h  Report.docx  main.cpp
Lab6/: CMakeLists.txt  main.cpp  ~$Report.docx
